feat: 패널티 시스템을 Penalty 엔티티 기반으로 리팩토링